--- a/client/src/pages/MainPage/ui/MainPage.module.css
+++ b/client/src/pages/MainPage/ui/MainPage.module.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -93,4 +93,4 @@
       transform: translateY(0);
     }
   }
-  
+   */
