--- a/client/src/features/auth/ui/AuthForm/AuthForm.module.css
+++ b/client/src/features/auth/ui/AuthForm/AuthForm.module.css
@@ -4,9 +4,9 @@
     justify-content: center;
     align-items: center;
     height: 40vh;
-  }
-  
-  .form {
+}
+
+.form {
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -15,17 +15,20 @@
     padding: 20px;
     border-radius: 8px;
     background-color: #f9f9f9;
-  }
-  
-  .input {
+}
+
+.input {
     padding: 10px;
     border-radius: 5px;
     border: 1px solid #ccc;
     font-size: 16px;
-  }
-  
-  input:focus {
+}
+
+input:focus {
     border-color: #4d90fe;
     outline: none;
-  }
-  
+}
+
+.btn {
+    border-radius: 5px;
+}
