--- a/client/src/entities/card/ui/styles.css
+++ b/client/src/entities/card/ui/styles.css
@@ -76,33 +76,7 @@ button {
 button:hover {
     background-color: #0073e6;
 }
-
-/* Стиль для таблицы с вопросами */
-table {
-    width: 100%;
-    border-collapse: collapse;
-    margin: 20px 0;
-}
-
-th, td {
-    padding: 15px;
-    text-align: center;
-    border: 1px solid #003366;
-    font-size: 1.2rem;
-}
-
-th {
-    background-color: #003366;
-    color: gold;
-}
-
-td {
-    background-color: #1d1d1d;
-    color: gold;
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
-
-td:hover {
-    background-color: #0073e6;
+button:disabled {
+    background-color: gray;
+    cursor: not-allowed;
 }
